tunneling-outbound-traffic-k8s/samples/gateway/tls/istio-mutual/mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-mtls-for-egress-gateway
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  trafficPolicy:
    # Traffic on port 80 will be sent as plain text to the final destination, because the destination rule below
    # originates mTLS only between a sidecar proxy and an egress gateway listening in ISTIO_MUTUAL mode
    # which terminates connection and then forwards as is.
    tls:
      mode: ISTIO_MUTUAL
      sni: external-app.external.svc.cluster.local
